Fixed un-styled area between the horizontal and vertical scrollbars

--- a/dl4se-website/src/assets/styles/override/_scroll.sass
+++ b/dl4se-website/src/assets/styles/override/_scroll.sass
@@ -5,5 +5,8 @@
 ::-webkit-scrollbar-track
   background: $light-gray
 
+::-webkit-scrollbar-corner
+  background: $light-gray
+
 ::-webkit-scrollbar-thumb
   background: $gray-600
